# redstone

./: Cargo.toml  LICENSE
redstone-app/: Cargo.toml
redstone-app/src/: main.rs
redstone-cli/: Cargo.toml
redstone-cli/src/: cmd.rs  lib.rs
redstone-core/: Cargo.toml
redstone-core/src/: config.rs  daemon.rs  editor.rs  ipc.rs  lib.rs  profile.rs  slp.rs
redstone-i18n/locales/: en-US.yaml  zh-CN.yaml
redstone-tui/: Cargo.toml
redstone-tui/src/: console.rs  event.rs  lib.rs  state.rs  ui.rs
