[package]
name = "redstone-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
redstone-cli = { path = "../redstone-cli" }
rust-i18n.workspace = true
sys-locale.workspace = true
tokio.workspace = true

[[bin]]
name = "redstone"
path = "src/main.rs"
