[package]
name = "redstone-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
serde_yaml.workspace = true
interprocess.workspace = true
redstone-core = { path = "../redstone-core" }
rust-i18n.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
