[package]
name = "redstone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
serde_yaml.workspace = true
interprocess.workspace = true
redstone-core = { path = "../redstone-core" }
rust-i18n.workspace = true
tokio.workspace = true
unicode-width.workspace = true
