[package]
name = "redstone-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
interprocess = { version = "2.4.2", features = ["tokio"] }
rust-i18n = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
