[package]
name = "redstone-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
crossterm.workspace = true
dirs.workspace = true
interprocess.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
unicode-width.workspace = true

