[package]
name = "redstone-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
redstone-core = { path = "../redstone-core" }
rust-i18n.workspace = true
strip-ansi-escapes.workspace = true
tokio.workspace = true
unicode-width.workspace = true
